@@ -12,6 +12,7 @@
 
 """
 
+from flask import abort
 from flask import Blueprint
 from sqlalchemy.orm import scoped_session
 
@@ -193,7 +194,9 @@ class APIManager(object):
                              allow_patch_many=False, allow_functions=False,
                              authentication_required_for=None,
                              authentication_function=None,
-                             include_columns=None, validation_exceptions=None):
+                             include_columns=None, validation_exceptions=None,
+                             hide_disallowed_endpoints=False,
+                             hide_unauthenticated_endpoints=False):
         """Creates an returns a ReSTful API interface as a blueprint, but does
         not register it on any :class:`flask.Flask` application.
 
@@ -277,9 +280,25 @@ class APIManager(object):
         columns will be included. If this list includes a string which does not
         name a column in `model`, it will be ignored.
 
+        If `hide_disallowed_endpoints` is ``True``, requests to disallowed
+        methods (that is, methods not specified in `methods`), which would
+        normally yield a :http:statuscode:`405` response, will yield a
+        :http:statuscode:`404` response instead. If
+        `hide_unauthenticated_endpoints` is ``True``, requests to endpoints for
+        which the user has not authenticated (as specified in the
+        `authentication_required_for` and `authentication_function` arguments)
+        will also be masked by :http:statuscode:`404` instead of
+        :http:statuscode:`403`. These options may be used as a simple form of
+        "security through obscurity", by (slightly) hindering users from
+        discovering where an endpoint exists.
+
         .. versionadded:: 0.6
            This functionality was formerly in :meth:`create_api`, but the
            blueprint creation and registration have now been separated.
+
+        .. versionadded:: 0.6
+           Added the `hide_disallowed_endpoints` and
+           `hide_unauthenticated_endpoints` keyword argument.
 
         .. versionadded:: 0.5
            Added the `include_columns` keyword argument.
@@ -359,6 +378,14 @@ class APIManager(object):
             eval_endpoint = '/eval' + collection_endpoint
             blueprint.add_url_rule(eval_endpoint, methods=['GET'],
                                    view_func=eval_api_view)
+        if hide_disallowed_endpoints:
+            @blueprint.errorhandler(405)
+            def return_404(error):
+                abort(404)
+        if hide_unauthenticated_endpoints:
+            @blueprint.errorhandler(403)
+            def return_404(error):
+                abort(404)
         return blueprint
 
     def create_api(self, *args, **kw):
