@@ -13,6 +13,10 @@ Version 0.6
 
 Not yet released.
 
+- Added the ``hide_endpoints`` keyword argument to
+  :meth:`APIManager.create_api_blueprint` to hide disallowed HTTP methods
+  behind a :http:statuscode:`404` response instead of a :http:statuscode:`405`
+  response.
 - Separated API blueprint creation from registration, using
   :meth:`APIManager.create_api` and :meth:`APIManager.create_api_blueprint`.
 - Added support for pure SQLAlchemy in addition to Flask-SQLAlchemy.
